@@ -1,3 +1,12 @@
+2002-01-21  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 02876] w3mmail.cgi.in backport from w3mmee
+	* action='file://$0'
+	* don't add \n to $body's tail
+	* $body =~ s/\r+\n/\n/g;
+	* s/@cmd/@opt/
+	* url_unquote: + should be unquote too
+
 2002-01-18  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 02873] delete "decode MIME-body" in doc{,-jp}/README
